--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
     "build": "webpack",
     "watch": "webpack -w",
     "test": "karma start karma.conf.js",
-	"test-debug": "karma start karma.conf.js --single-run=false --debug --auto-watch",
+    "test-debug": "karma start karma.conf.js --single-run=false --debug --auto-watch",
     "test-browser": "karma start karma.conf.js --browsers=Chrome",
     "test-browser-debug": "karma start karma.conf.js --browsers=Chrome --single-run=false --debug --auto-watch"
   },
   "dependencies": {
     "flux": "~2.1.1",
     "react": "~0.14.7",
-    "react-dom": "~0.14.7"
+    "react-dom": "~0.14.7",
+    "react-mdl": "^1.5.3",
+    "react-router": "^2.3.0"
   },
   "devDependencies": {
     "babel": "~6.5.2",
