--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,13 @@
 {
     "compilerOptions": {
         "target": "es6",
+        "moduleResolution": "node",
         "sourceMap": true,
         "jsx": "react"
-    }
+    },
+    "exclude": [
+        "node_modules",
+        "typings/main",
+        "typings/main.d.ts"
+    ]
 }
