--- a/package.json
+++ b/package.json
@@ -45,13 +45,14 @@
     "node-libs-browser": "~1.0.0",
     "null-loader": "~0.1.1",
     "phantomjs-prebuilt": "~2.1.7",
-    "react-hot-loader": "~1.3.0",
     "react-addons-test-utils": "~0.14.8",
+    "react-hot-loader": "~1.3.0",
     "style-loader": "~0.13.1",
     "ts-loader": "~0.8.1",
     "tslint": "~3.6.0",
     "tslint-loader": "~2.1.3",
-    "typescript": "~1.8.9",
+    "typescript": "~1.8.10",
+    "typings": "^0.8.1",
     "webpack": "~1.12.14",
     "webpack-config": "~3.1.0",
     "webpack-dev-server": "~1.14.1"
